--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>US Median Income Visualization</title>
+    <title>US Median Income Scatter Plot</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="https://unpkg.com/d3-annotation"></script>
-    <script src="https://unpkg.com/topojson-client@3"></script>
     <style>
         .tooltip { 
             position: absolute;
@@ -15,8 +13,61 @@
     </style>
 </head>
 <body>
-    <div id="map"></div>
+    <div id="scatter-plot"></div>
 
-    <script src="script.js"></script>
+    <script>
+        // Margin, width and height
+        const margin = {top: 20, right: 20, bottom: 30, left: 40};
+        const width = 960 - margin.left - margin.right;
+        const height = 500 - margin.top - margin.bottom;
+
+        // Create SVG element
+        const svg = d3.select("#scatter-plot")
+            .append("svg")
+            .attr("width", width + margin.left + margin.right)
+            .attr("height", height + margin.top + margin.bottom)
+            .append("g")
+            .attr("transform", `translate(${margin.left}, ${margin.top})`);
+
+        // Load data
+        d3.csv("State_Income_Clean.csv").then(data => {
+            // Parse and prepare the data
+            data.forEach(d => {
+                d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');
+                d['YoY Growth'] = +d['YoY Growth'].replace('%', '');
+            });
+
+            // Create scales
+            const x = d3.scaleLinear()
+                .domain(d3.extent(data, d => d['YoY Growth']))
+                .range([0, width]);
+
+            const y = d3.scaleLinear()
+                .domain(d3.extent(data, d => d['2021 Median income']))
+                .range([height, 0]);
+
+            // Add X axis
+            svg.append("g")
+                .attr("transform", `translate(0, ${height})`)
+                .call(d3.axisBottom(x));
+
+            // Add Y axis
+            svg.append("g")
+                .call(d3.axisLeft(y));
+
+            // Add dots
+            svg.append("g")
+                .selectAll("dot")
+                .data(data)
+                .join("circle")
+                .attr("cx", d => x(d['YoY Growth']))
+                .attr("cy", d => y(d['2021 Median income']))
+                .attr("r", 5)
+                .style("fill", "#69b3a2");
+
+            // Add tooltips
+            // Add your tooltip code here
+        });
+    </script>
 </body>
 </html>
