--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div id="scatter-plot"></div>
+    <button onClick="window.location.href='barchart.html';">Next</button>
 
     <script>
         // Margin, width and height
