--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,9 @@
     </style>
 </head>
 <body>
+    <button onClick="window.location.href='index.html';">Previous</button>
     <div id="bar-chart"></div>
+    <button onClick="window.location.href='page2.html';">Next</button>
 
     <script>
         // Margin, width and height
