Add next and previous buttons to bottom, add CSS sheet

--- a/page1.html
+++ b/page1.html
@@ -12,8 +12,10 @@
 <body>
     <button onClick="window.location.href='index.html';">Previous</button>
     <div id="bar-chart"></div>
-    <button onClick="window.location.href='page2.html';">Next</button>
-
+    <div class="button-container">
+        <button onClick="window.location.href='index.html';">Previous</button>
+        <button onClick="window.location.href='page2.html';">Next</button>
+    </div>    
     <script>
         // Margin, width and height
         const margin = {top: 20, right: 20, bottom: 70, left: 40};
