--- a/page2.html
+++ b/page2.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <title>Page 2</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>Hello World!</h1>
     <button onClick="window.location.href='page1.html';">Previous</button>
+    <div class="button-container">
+        <button onClick="window.location.href='page1.html';">Previous</button>
+    </div>
 </body>
 </html>
