--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>US Median Income Scatter Plot</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         .tooltip { 
             position: absolute;
@@ -14,7 +15,10 @@
 </head>
 <body>
     <div id="scatter-plot"></div>
-    <button onClick="window.location.href='page1.html';">Next</button>
+    
+    <div class="button-container">
+        <button onClick="window.location.href='page1.html';">Next</button>
+    </div>
 
     <script>
         // Margin, width and height
