remove old previous button

--- a/page1.html
+++ b/page1.html
@@ -8,9 +8,10 @@
             fill: steelblue;
         }
     </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
-    <button onClick="window.location.href='index.html';">Previous</button>
     <div id="bar-chart"></div>
     <div class="button-container">
         <button onClick="window.location.href='index.html';">Previous</button>
