--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </style>
 </head>
 <body>
+    <h1>Income by State</h1>
+    <ul>
+        <li>This is an exploration of what states have the highest income growth and what factors are correlated with that growth.</li>
+    </ul>
     <div id="scatter-plot"></div>
     
     <div class="button-container">
