--- a/index.html
+++ b/index.html
@@ -37,18 +37,17 @@
         .append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-        // Load data
-        d3.csv("State_Income_Clean.csv").then(data => {
-            // Parse and prepare the data
-            data.forEach(d => {
-                d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');
-                d['YoY Growth'] = +d['YoY Growth'].replace('%', '');
-            });
+    // Load data
+    d3.csv("State_Income_Clean.csv").then(data => {
+        // Parse and prepare the data
+        data.forEach(d => {
+            d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');  // remove commas and convert to number
+            d['YoY Growth'] = +d['YoY Growth'].slice(0, -1);  // remove the '%' symbol and convert to number
+        });
 
         // Define scales
         var x = d3.scaleLinear()
             .domain([0, d3.max(data, d => d['YoY Growth'])])
-            .range([ 0, width ]);
         var y = d3.scaleLinear()
             .domain([35000, d3.max(data, d => d['2021 Median income'])])  // Start y-axis at 35,000
             .range([ height, 0]);
