--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
         // Define scales
         var x = d3.scaleLinear()
-            .domain([0, d3.max(data, d => d['YoY Growth'])])
-            .range([ 0, width ]);
+            .domain([d3.min(data, d => d['YoY Growth']), d3.max(data, d => d['YoY Growth'])])  // x-axis starts from the minimum growth rate
+            .range([0, width]);
         var y = d3.scaleLinear()
             .domain([35000, d3.max(data, d => d['2021 Median income'])])  // Start y-axis at 35,000
             .range([ height, 0]);
