Add chart for page 1 that has political party

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <h1>Income by State</h1>
     <ul>
-        <li>This is an exploration of what states have the highest income growth and what factors are correlated with that growth.</li>
+        <li>This is an interactive slideshow of what states have the highest income growth and what factors are correlated with that growth.</li>
     </ul>
     <div id="scatter-plot"></div>
     
