--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
       incomeData.forEach(d => {
         d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');
         d['YoY Growth'] = +d['YoY Growth'].slice(0, -1);
-        d.Party = partyLookup[d.state];  // Add party data
+        d.Party = partyLookup[d.State];  // Add party data
       });
 
       var x = d3.scaleLinear()
