--- a/page1.html
+++ b/page1.html
@@ -70,19 +70,17 @@
          .attr("cy", function(d) { return y(d['2021 Median income']); })
          .attr("r", 5)
          .style("fill", function(d) { return color(d.Party); })
-         .on("mouseover", function(d) {
-                tooltip.transition()
-                  .duration(200)
-                  .style("opacity", .9);
-              tooltip.html(d.state + "<br/>" + "Income: " + d['2021 Median income'] + "<br/>" + "YoY Growth: " + d['YoY Growth'])
-                 .style("left", (d3.event.pageX + 5) + "px")
-                  .style("top", (d3.event.pageY - 28) + "px");
-          })
-          .on("mouseout", function(d) {
-             tooltip.transition()
-                 .duration(500)
-                 .style("opacity", 0);
-          });
+         .on("mouseover", function(event, d) {
+                  tooltip.style("visibility", "visible")
+                      .html(`State: ${d.State}<br>2021 Median Income: ${d['2021 Median income']}<br>YoY Growth: ${d['YoY Growth']}`);
+                })
+             .on("mousemove", function(event) {
+                   tooltip.style("top", (event.pageY-10)+"px")
+                      .style("left",(event.pageX+10)+"px");
+             })
+             .on("mouseout", function() {
+                 tooltip.style("visibility", "hidden");
+             });
             
 
     });
