--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,10 @@
 </head>
 <body>
   <h1>Income by State With Political Party</h1>
+  <ul>
+      <li>This scene labels the data points blue if the govenor of that state is Democratic or red if the govenor of that state is Republican.</li>
+      <li>As you can see there doesn't seem to be a coorelation between the top growing states and party policy.</li>
+  </ul>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script>
     var margin = {top: 20, right: 20, bottom: 60, left: 120};
