--- a/page1.html
+++ b/page1.html
@@ -67,24 +67,26 @@
           .attr("transform", "translate(0," + y(35000) + ")")
           .call(d3.axisBottom(x));
 
-      svg.selectAll("dot")
+          svg.selectAll("dot")
             .data(incomeData)
             .enter().append("circle")
             .attr("cx", function(d) { return x(d['YoY Growth']); })
-         .attr("cy", function(d) { return y(d['2021 Median income']); })
-         .attr("r", 5)
-         .style("fill", function(d) { return color(d.Party); })
-         .on("mouseover", function(event, d) {
-                  tooltip.style("visibility", "visible")
-                      .html(`State: ${d.State}<br>2021 Median Income: ${d['2021 Median income']}<br>YoY Growth: ${d['YoY Growth']}`);
-                })
-             .on("mousemove", function(event) {
-                   tooltip.style("top", (event.pageY-10)+"px")
-                      .style("left",(event.pageX+10)+"px");
-             })
-             .on("mouseout", function() {
-                 tooltip.style("visibility", "hidden");
-             });
+            .attr("cy", function(d) { return y(d['2021 Median income']); })
+            .attr("r", 5)
+            .style("fill", function(d) { return color(d.Party); })
+            .on("mouseover", function(d) {
+                tooltip.transition()
+                    .duration(200)
+                 .style("opacity", .9);
+                tooltip.html(d.state + "<br/>" + "Income: " + d['2021 Median income'] + "<br/>" + "YoY Growth: " + d['YoY Growth'] + "<br/>" + "Party: " + d.Party)
+                 .style("left", (d3.event.pageX + 5) + "px")
+                 .style("top", (d3.event.pageY - 28) + "px");
+            })
+            .on("mouseout", function(d) {
+                tooltip.transition()
+                 .duration(500)
+                 .style("opacity", 0);
+            });
             
 
     });
