--- a/page1.html
+++ b/page1.html
@@ -74,21 +74,23 @@
             .attr("cy", function(d) { return y(d['2021 Median income']); })
             .attr("r", 5)
             .style("fill", function(d) { return color(d.Party); })
-            .on("mouseover", function(d) {
+            .on("mouseover", function(event, d) {
                 tooltip.transition()
                     .duration(200)
-                 .style("opacity", .9);
-                tooltip.html(d.state + "<br/>" + "Income: " + d['2021 Median income'] + "<br/>" + "YoY Growth: " + d['YoY Growth'] + "<br/>" + "Party: " + d.Party)
-                 .style("left", (d3.event.pageX + 5) + "px")
-                 .style("top", (d3.event.pageY - 28) + "px");
+                    .style("opacity", .9);
+              const pointer = d3.pointer(event, svg.node());
+              tooltip.html(d.state + "<br/>" + "Income: " + d['2021 Median income'] 
+                  + "<br/>" + "YoY Growth: " + d['YoY Growth'] + "%" 
+                 + "<br/>" + "Party: " + d.Party)
+                 .style("left", (pointer[0] + 70) + "px")  // Adjust these values as needed
+                 .style("top", (pointer[1]) + "px");
             })
             .on("mouseout", function(d) {
                 tooltip.transition()
                  .duration(500)
                  .style("opacity", 0);
             });
-            
-
+        
     });
   </script>
   <button class="button" onclick="location.href='index.html'">Previous</button>
