--- a/page1.html
+++ b/page1.html
@@ -75,21 +75,17 @@
             .attr("r", 5)
             .style("fill", function(d) { return color(d.Party); })
             .on("mouseover", function(event, d) {
-                tooltip.transition()
-                    .duration(200)
-                    .style("opacity", .9);
-              const pointer = d3.pointer(event, svg.node());
-              tooltip.html(d.state + "<br/>" + "Income: " + d['2021 Median income'] 
-                  + "<br/>" + "YoY Growth: " + d['YoY Growth'] + "%" 
-                 + "<br/>" + "Party: " + d.Party)
-                 .style("left", (pointer[0] + 70) + "px")  // Adjust these values as needed
-                 .style("top", (pointer[1]) + "px");
-            })
-            .on("mouseout", function(d) {
-                tooltip.transition()
-                 .duration(500)
-                 .style("opacity", 0);
-            });
+                  tooltip.style("visibility", "visible")
+                      .html(`State: ${d.State}<br>2021 Median Income: ${d['2021 Median income']}<br>YoY Growth: ${d['YoY Growth']}`);
+                })
+             .on("mousemove", function(event) {
+                   tooltip.style("top", (event.pageY-10)+"px")
+                      .style("left",(event.pageX+10)+"px");
+             })
+             .on("mouseout", function() {
+                 tooltip.style("visibility", "hidden");
+             });
+
             // Create a div for the tooltip
             var tooltip = d3.select("body")
                 .append("div")
