--- a/page1.html
+++ b/page1.html
@@ -98,31 +98,30 @@
                 .style("border-radius", "5px")
                 .style("padding", "10px");
                 
-             // Add the legend
+             // Define the parties
+            var parties = ["Democratic", "Republican"];
+
+            // Add the legend
             var legend = svg.selectAll(".legend")
-              .data(color.domain())
-              .enter().append("g")
-              .attr("class", "legend")
-              .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+                .data(parties)
+                .enter().append("g")
+                .attr("class", "legend")
+                .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
 
             // Draw legend colored rectangles
             legend.append("rect")
                 .attr("x", width - 18)
                 .attr("width", 18)
-             .attr("height", 18)
-             .style("fill", color);
+                .attr("height", 18)
+                .style("fill", color);
 
             // Draw legend text
             legend.append("text")
                 .attr("x", width - 24)
-             .attr("y", 9)
-             .attr("dy", ".35em")
-             .style("text-anchor", "end")
-             .text(function(d) { return d; });
-
-             var color = d3.scaleOrdinal()
-                .domain(["Democratic", "Republican"])
-                .range(["blue", "red"]);
+                .attr("y", 9)
+                .attr("dy", ".35em")
+                .style("text-anchor", "end")
+                .text(function(d) { return d; });
             });
   </script>
   <button class="button" onclick="location.href='index.html'">Previous</button>
