--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 
         // Create axes
         svg.append("g")
-            .attr("transform", "translate(0," + height + ")")
-            .call(d3.axisBottom(x));
-        svg.append("g")
-            .call(d3.axisLeft(y));
+          .attr("transform", "translate(" + x(0) + ",0)")
+          .call(d3.axisLeft(y));
+
+      svg.append("g")
+          .attr("transform", "translate(0," + y(35000) + ")")
+          .call(d3.axisBottom(x));
 
         // Add X-Axis label
         svg.append("text")
