--- a/page1.html
+++ b/page1.html
@@ -67,6 +67,22 @@
           .attr("transform", "translate(0," + y(35000) + ")")
           .call(d3.axisBottom(x));
 
+     // Add X-Axis label
+              svg.append("text")
+            .attr("text-anchor", "end")
+            .attr("x", width)
+            .attr("y", height + margin.bottom / 2)
+            .text("Year-Over-Year Growth (Percentage)");
+
+        // Add Y-Axis label
+        svg.append("text")
+            .attr("text-anchor", "end")
+            .attr("y", -margin.left + 20)  // Moved the label a bit more to the left
+            .attr("dy", ".75em")
+            .attr("transform", "rotate(-90)")
+            .text("Median Income (USD)");
+
+        //plot data
           svg.selectAll("dot")
             .data(incomeData)
             .enter().append("circle")
