--- a/page2.html
+++ b/page2.html
@@ -35,11 +35,17 @@
            });
 
         incomeData.forEach(function(d) {
-        d.Density = popLookup[d.state] || 0;
-        d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');
-        d['YoY Growth'] = +d['YoY Growth'].replace('%', '');
-        d.DensityGroup = d.Density > 113 ? 'Urban' : 'Rural';
+            d.Density = popLookup[d.State] || 0;
+            d['2021 Median income'] = +d['2021 Median income'].replace(/,/g, '');
+            d['YoY Growth'] = +d['YoY Growth'].replace('%', '');
+             d.DensityGroup = d.Density > 113 ? 'Urban' : 'Rural';
         });
+
+
+            // Create color scale
+            const color = d3.scaleOrdinal()
+                .domain(["Urban", "Rural"])
+                .range(["orange", "green"]);
 
             // Axes and scales
             const x = d3.scaleLinear().domain([d3.min(incomeData, d => d["YoY Growth"]), d3.max(incomeData, d => d["YoY Growth"])]).nice().range([0, width]);
@@ -88,7 +94,7 @@
                 .style("text-anchor", "end")
                 .text(d => d);
         });
-    </script>
+    </script> 
 </body>
 </html>
 
